--- a/index.html
+++ b/index.html
@@ -1,34 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Student Portfolio</title>
-      <link rel="stylesheet" href="style.css">
-   </head>
-   <body>
-      <header>
-         <h1 id="name">Kirk Roden C. Pacanan</h1>
-         <img src="profile.jpg" alt="Profile Picture" id="profile-img">
-         <p id="course-year">Computer Science - 2nd Year</p>
-         <button id="theme-toggle">Switch Theme</button>
-      </header>
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Student Portfolio</title>
+   <link rel="stylesheet" href="style.css">
+</head>
+<body>
+   <header>
+      <h1 id="name">Kirk Roden C. Pacanan</h1>
+      <img src="profile.jpg" alt="Kirk's Profile Picture" id="profile-img">
+      <p id="course-year">Computer Science • 2nd Year</p>
+      <button id="theme-toggle">Switch Theme</button>
+   </header>
+
+   <main>
       <section id="achievements">
-         <h2>Achievements/Certifications</h2>
+         <h2>Achievements & Certifications</h2>
          <ul>
-            <li>ITS certification</li>
-            <li>Consistent Deans Lister</li>
-            
+            <li>ITS Certification</li>
+            <li>Consistent Dean’s Lister</li>
          </ul>
       </section>
+
       <section id="projects">
          <h2>Previous Projects</h2>
          <ul>
             <li>Management Booking System</li>
             <li>Money Tracker</li>
-            
          </ul>
       </section>
-      <script src="script.js"></script>
-   </body>
+   </main>
+
+   <footer>
+      <p>&copy; 2025 Kirk Pacanan | Student Portfolio</p>
+   </footer>
+
+   <script src="script.js"></script>
+</body>
 </html>
