--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <header>
       <h1 id="name">Kirk Roden C. Pacanan</h1>
-      <img src="profile.jpg" alt="Kirk's Profile Picture" id="profile-img">
+<img src="profile.jpg" alt="Kirk's Profile Picture" id="profile-img" loading="lazy">
       <p id="course-year">Computer Science • 2nd Year</p>
       <button id="theme-toggle">Switch Theme</button>
    </header>
