--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
             <div class="cta-group">
                <a class="btn primary" href="#projects">See Projects</a>
-               <a class="btn ghost" href="mailto:kirkroden.cpacanan@gmail.com">Email Me</a>
+               <a class="btn ghost" href="mailto:pacanan.kirk@gmail.com">Email Me</a>
             </div>
          </div>
          <div class="hero-photo">
@@ -61,10 +61,6 @@
             <article class="card">
                <h3>Dean’s Lister</h3>
                <p>Maintained a 1.25 GWA for 4 consecutive semesters through disciplined study habits and peer tutoring.</p>
-            </article>
-            <article class="card">
-               <h3>Campus Hackathon Finalist</h3>
-               <p>Lead front-end dev for a personal finance app prototype judged by industry mentors.</p>
             </article>
          </div>
       </section>
@@ -104,14 +100,14 @@
             <article class="project-card">
                <div class="project-meta">
                   <span class="tag">Automation</span>
-                  <span class="year">2024</span>
+                  <span class="year">2023</span>
                </div>
-               <h3>Study Workflow Toolkit</h3>
-               <p>Collection of Python scripts that scrape schedules, sync reminders, and summarize lecture notes into Anki cards.</p>
+               <h3>Lost and Found System</h3>
+               <p>Campus-wide tracker for MMCM that records reports, assigns case owners, and notifies students when belongings match new claims.</p>
                <ul class="project-tags">
-                  <li>Python</li>
-                  <li>APIs</li>
-                  <li>Notion</li>
+                  <li>PHP</li>
+                  <li>MySQL</li>
+                  <li>Workflow Automation</li>
                </ul>
             </article>
          </div>
@@ -123,14 +119,9 @@
             <h2>Skills & Focus Areas</h2>
          </div>
          <div class="skill-chips">
-            <span>HTML & CSS</span>
-            <span>JavaScript (ES6+)</span>
-            <span>React basics</span>
-            <span>Node.js</span>
-            <span>PostgreSQL</span>
-            <span>Python automation</span>
-            <span>UI Prototyping</span>
-            <span>Technical Writing</span>
+            <span>UI / UX Design Systems</span>
+            <span>Wireframing & Prototyping</span>
+            <span>Practicing new programming languages</span>
          </div>
       </section>
 
@@ -141,14 +132,14 @@
          </div>
          <div class="timeline">
             <article>
-               <h3>STI College CDO</h3>
-               <p class="timeline-meta">2023 — Present • Student Leader</p>
-               <p>Organized peer-study circles, maintained shared learning resources, and mentored first-year CS students.</p>
+               <h3>CSS Finance Head, Mapúa Malayan Colleges Mindanao</h3>
+               <p class="timeline-meta">2025 — 2026 • Student Organization</p>
+               <p>Managed budget approvals, transparent reporting, and sponsor coordination for the Computer Science Society.</p>
             </article>
             <article>
-               <h3>Google Developer Student Clubs</h3>
-               <p class="timeline-meta">2024 • Volunteer Facilitator</p>
-               <p>Hosted design sprint workshops to help freshmen ship their first responsive website.</p>
+               <h3>Halad to Health</h3>
+               <p class="timeline-meta">Previous Talent Operations Manager</p>
+               <p>Coordinated volunteer onboarding, streamlined schedules, and kept the org’s remote teams aligned on deliverables.</p>
             </article>
          </div>
       </section>
@@ -161,13 +152,13 @@
          <div class="contact-card">
             <p>Email me anytime or connect on socials for internships, hackathons, or freelance collabs.</p>
             <div class="contact-grid">
-               <a href="mailto:kirkroden.cpacanan@gmail.com" class="contact-item">
+               <a href="mailto:pacanan.kirk@gmail.com" class="contact-item">
                   <span>Email</span>
-                  <strong>kirkroden.cpacanan@gmail.com</strong>
+                  <strong>pacanan.kirk@gmail.com</strong>
                </a>
-               <a href="https://www.linkedin.com" class="contact-item" target="_blank" rel="noreferrer">
+               <a href="https://www.linkedin.com/in/kirk-roden-pacanan" class="contact-item" target="_blank" rel="noreferrer">
                   <span>LinkedIn</span>
-                  <strong>/in/kirkpacanan</strong>
+                  <strong>Kirk Roden Pacanan</strong>
                </a>
                <a href="https://github.com" class="contact-item" target="_blank" rel="noreferrer">
                   <span>GitHub</span>
