--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <span class="tag">Full Stack</span>
                   <span class="year">2025</span>
                </div>
-               <h3>Management Booking System</h3>
+               <h3>Regalìa: Condo Management Booking System</h3>
                <p>Built a streamlined booking workflow with analytics and automatic reminders using Express, PostgreSQL, and vanilla JS.</p>
                <ul class="project-tags">
                   <li>Node.js</li>
