--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                user experiences with purposeful animation and clean code.
             </p>
             <ul class="hero-stats">
-               <li><strong>4+</strong><span>UI prototypes</span></li>
-               <li><strong>3</strong><span>team projects</span></li>
-               <li><strong>2</strong><span>certifications</span></li>
+               <li><strong>15+</strong><span>UI prototypes</span></li>
+               <li><strong>6</strong><span>team projects</span></li>
+               <li><strong>3</strong><span>certifications</span></li>
             </ul>
             <div class="cta-group">
                <a class="btn primary" href="#projects">See Projects</a>
@@ -76,7 +76,7 @@
                   <span class="tag">Full Stack</span>
                   <span class="year">2025</span>
                </div>
-               <h3>Regalìa: Condo Management Booking System</h3>
+               <h3>Management Booking System</h3>
                <p>Built a streamlined booking workflow with analytics and automatic reminders using Express, PostgreSQL, and vanilla JS.</p>
                <ul class="project-tags">
                   <li>Node.js</li>
@@ -156,11 +156,11 @@
                   <span>Email</span>
                   <strong>pacanan.kirk@gmail.com</strong>
                </a>
-               <a href="https://www.linkedin.com/in/kirk-roden-pacanan" class="contact-item" target="_blank" rel="noreferrer">
+               <a href="https://www.linkedin.com/in/kirk-roden-pacanan-770aa7293/" class="contact-item" target="_blank" rel="noreferrer">
                   <span>LinkedIn</span>
                   <strong>Kirk Roden Pacanan</strong>
                </a>
-               <a href="https://github.com" class="contact-item" target="_blank" rel="noreferrer">
+               <a href="https://github.com/kirkpacanan" class="contact-item" target="_blank" rel="noreferrer">
                   <span>GitHub</span>
                   <strong>@kirkpacanan</strong>
                </a>
