--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
          <div class="logo">KP</div>
          <div class="nav-links">
             <a href="#projects">Projects</a>
+            <a href="#lab-tasks">Lab Tasks</a>
             <a href="#achievements">Achievements</a>
             <a href="#skills">Skills</a>
             <a href="#contact">Contact</a>
@@ -109,6 +110,31 @@
                   <li>MySQL</li>
                   <li>Workflow Automation</li>
                </ul>
+            </article>
+         </div>
+      </section>
+
+      <section id="lab-tasks">
+         <div class="section-heading">
+            <p>Web Programming (Lab)</p>
+            <h2>Lab Tasks</h2>
+         </div>
+         <div class="lab-grid">
+            <article class="lab-card">
+               <a href="https://kirkpacanan.github.io/portfolio" target="_blank" rel="noreferrer">
+                  <div class="lab-image-wrapper">
+                     <img src="task1-github-pages.jpg" alt="Task 1 - M1|FA1 GitHub Pages preview" loading="lazy">
+                  </div>
+               </a>
+               <h3>Task 1. M1|FA1-GitHub Pages</h3>
+            </article>
+            <article class="lab-card">
+               <a href="https://kirkpacanan.github.io/FreshSense" target="_blank" rel="noreferrer">
+                  <div class="lab-image-wrapper">
+                     <img src="task2-landing-page.jpg" alt="Task 2 - M1|FA2 Landing Page Using CSS preview" loading="lazy">
+                  </div>
+               </a>
+               <h3>Task 2. M1|FA2-Landing Page Using CSS</h3>
             </article>
          </div>
       </section>
