--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
                </a>
                <h3>Task 2. M1|FA2-Landing Page Using CSS</h3>
             </article>
+            <article class="lab-card">
+               <a href="https://kirkpacanan.github.io/MACHINE-PROBLEMS/" target="_blank" rel="noreferrer">
+                  <div class="lab-image-wrapper">
+                     <img src="task3-javascript-mps.jpg" alt="Task 3 - M1|FA3 JavaScript Machine Problems preview" loading="lazy">
+                  </div>
+               </a>
+               <h3>Task 3. M1|FA3 - JavaScript MPs</h3>
+            </article>
          </div>
       </section>
 
