--- a/index.html
+++ b/index.html
@@ -144,6 +144,14 @@
                </a>
                <h3>Task 3. M1|FA3 - JavaScript MPs</h3>
             </article>
+            <article class="lab-card">
+               <a href="https://pacanan-webapp-demo.vercel.app" target="_blank" rel="noreferrer">
+                  <div class="lab-image-wrapper">
+                     <img src="task4-deploy-vercel.jpg" alt="Task 4 - M1|FA4 Deploy to Vercel preview" loading="lazy">
+                  </div>
+               </a>
+               <h3>Task 4. M1|FA4-DeployToVercel</h3>
+            </article>
          </div>
       </section>
 
