--- a/index.html
+++ b/index.html
@@ -152,6 +152,14 @@
                </a>
                <h3>Task 4. M1|FA4-DeployToVercel</h3>
             </article>
+            <article class="lab-card">
+               <a href="https://thecozycornerbypacanan-fho1sk3iw-kirk-pacanans-projects.vercel.app" target="_blank" rel="noreferrer">
+                  <div class="lab-image-wrapper">
+                     <img src="task5-seo-fundamentals.jpg" alt="Task 5 - M1|FA5 SEO Fundamentals preview" loading="lazy">
+                  </div>
+               </a>
+               <h3>Task 5. M1|FA5-SEO Fundamentals</h3>
+            </article>
          </div>
       </section>
 
