--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
                </a>
                <h3>Task 5. M1|FA5-SEO Fundamentals</h3>
             </article>
+            <article class="lab-card">
+               <a href="https://restapi-pokedemo-pacanan.vercel.app" target="_blank" rel="noreferrer">
+                  <div class="lab-image-wrapper">
+                     <img src="task6-pokemon-dashboard.jpg" alt="Task 6 - M1|FA6 Pokemon Dashboard preview" loading="lazy">
+                  </div>
+               </a>
+               <h3>Task 6. M1|FA6-Pokemon Dashboard</h3>
+            </article>
          </div>
       </section>
 
