--- a/index.html
+++ b/index.html
@@ -168,6 +168,14 @@
                </a>
                <h3>Task 6. M1|FA6-Pokemon Dashboard</h3>
             </article>
+            <article class="lab-card">
+               <a href="https://pacanan-s-epart3.vercel.app" target="_blank" rel="noreferrer">
+                  <div class="lab-image-wrapper">
+                     <img src="task7-summative-exam-part3.jpg" alt="Task 7 - M1 Summative Exam Part 3 preview" loading="lazy">
+                  </div>
+               </a>
+               <h3>Task 7. M1 Summative Exam - Part 3</h3>
+            </article>
          </div>
       </section>
 
